# axum-sqlx

./: .editorconfig  .env  .gitignore  Cargo.toml  DB_Design.md  Dockerfile  LICENSE  README.md  ScratchPad.md  axum-private-key.pem  axum-public-key.pem  axum_private.pem  axum_public.pem  private_ed_key.pem  public_ed_key.pem
.github/workflows/: ci.yml  rust.yml
assets/: index.html
assets/js/: app.js
migrations/: 20240427123729_pg_create_sqlx_users_table.sql  20241129061640_pg_create_authentication_tables.sql  20250204104336_pg_create_refresh_otken_table.sql  20250329133335_pg_passkey_credential_table.sql
src/: lib.rs  main.rs
src/api/handler/: auth_handler.rs  cache_handler.rs  mfa_handler.rs  mod.rs  passkey_handler.rs  totp_handler.rs  user_handler.rs  welcome_handler.rs
src/api/model/: auth.rs  mfa.rs  mod.rs  user.rs
src/cache/: mod.rs  valkey_cache.rs
src/config/: app_config.rs  mod.rs  otel_config.rs
src/db/entity/: auth.rs  mfa.rs  mod.rs  passkey.rs  user.rs  user_login_credentials.rs
src/db/repo/: auth_repository.rs  mfa_repository.rs  mod.rs  passkey_credentials_repository.rs  passkey_repository.rs  user_login_credentials_repository.rs  user_repository.rs  users_repository.rs
src/error/: api_error.rs  error_model.rs  mod.rs
src/middleware/: auth.rs  mod.rs  otel_middleware.rs
src/observability/: instrumentation.rs  logs.rs  metrics.rs  mod.rs  tracing.rs
src/service/: auth_service.rs  mfa_service.rs  mod.rs  user_service.rs
src/service/email/: mod.rs
src/service/sms/: mod.rs
src/util/: crypto_helper.rs  mod.rs
tests/: helpers.rs  main.rs
tests/integration/: auth_security_test.rs  mod.rs  user_test.rs
