[package]
name = "axum-sqlx"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to Reduce the size of release binary.
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# core axum library
axum = { version = "^0" }
axum-extra = "^0"

# Tower dependencies
tower-http = { version = "^0", features = ["cors", "compression-full", "timeout"] }

# JSON parser
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# SQL with PostgreSQL.
sqlx = { version = "^0", features = ["postgres", "runtime-tokio", "chrono", "json"] }

# Security
argon2 = "^0"
jsonwebtoken = "^9"

# Async
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }

# Logging and tracing
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }

# Validation
validator = { version = "^0", features = ["derive"] }
derive_more = "^0"

# OpenAPI / Swagger UI.
utoipa = { version = "^4", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "^0", features = ["axum"] }

# Caching
redis = { version = "^0", features = ["tokio-comp"] }
bb8-redis = "^0"

# rest api client
reqwest = "^0"

# Utils
dotenvy = "^0"
nid = "^3"
