[package]
name = "axum-sqlx"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to Reduce the size of release binary.
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 3   # Optimize for size. Options are 0, 1, 2, 3, s, or z. More info at https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# core axum library
axum = { version = "^0" }

# Tower dependencies
tower-http = { version = "^0", features = [
  "cors",
  "compression-zstd",
  "timeout",
  "fs",
] }

# JSON parser
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# SQL with PostgreSQL.
sqlx = { version = "^0", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "json",
] }
axum-extra = { version = "0.10.0", features = ["cookie-private", "typed-header"] }

# Security
argon2 = "^0"
jsonwebtoken = "^9"
hmac = "^0"
sha2 = "^0"
totp-rs = { version = "^5", features = ["qr", "otpauth"] }   # for TOTP 2FA
webauthn-rs = { version = "^0", features = ["danger-allow-state-serialisation"]}  # for passkey based authentication.
openssl = "^0"
xxhash-rust = { version = "^0", features = ["xxh3"] } # Extremely fast non-cryptographic hash algorithm
aes-gcm = "^0" # AES-GCM authenticated encryption
rand_chacha = "^0" # Secure Random number generator

# Async
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }

# Logging and tracing
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }

# Validation
validator = { version = "^0", features = ["derive"] }
derive_more = { version ="^2", features = ["display", "error"] }

# OpenAPI / Swagger UI.
utoipa = { version = "^5", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "^0", features = ["axum"] }

# Caching
bb8-redis = "^0"

# Utils
dotenvy = "^0"
nanoid = "^0"
base64 = "^0"
uuid = { version = "^1", features = ["v4"] }
futures = "^0"
